--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://kit.fontawesome.com/80181411b5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" type="image/png" href="logo.png">
+    <meta name="theme-color" content="#793d0c" /><!-- Theme Color for Chrome, Firefox OS and Opera -->
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Portfolio ZOUAK Amira" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://amirazouak-portfolio.herokuapp.com/" />
+    <meta property="og:image" content="images/logo.png" />
+    <meta property="og:description" content="Développeuse web " />
+    <meta property="og:site_name" content="Portfolio ZOUAK Amira" />
+    <meta property="og:local" content="fr" />
 </head>
 
 <body>
