--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Amira</title>
+    <title>Amira ZOUAK, Développeuse web</title>
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -16,8 +16,8 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="Portfolio ZOUAK Amira" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://amirazouak-portfolio.herokuapp.com/" />
-    <meta property="og:image" content="images/logo.png" />
+    <meta property="og:url" content="Développeuse web" />
+    <meta property="og:image" content="images/link.jpg" />
     <meta property="og:description" content="Développeuse web " />
     <meta property="og:site_name" content="Portfolio ZOUAK Amira" />
     <meta property="og:local" content="fr" />
@@ -45,7 +45,7 @@
                     <a href="#portfolio" class="nav-link">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#contact" class="nav-link">Contact</a>
+                    <a href="#experience" class="nav-link">Contact</a>
                 </li>
             </ul>
         </nav>
