--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <nav class="top-nav">
             <ul class="nav-list">
                 <li>
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Accueil</a>
                 </li>
                 <li>
-                    <a href="#about" class="nav-link">About</a>
+                    <a href="#about" class="nav-link">A propos</a>
                 </li>
                 <li>
                     <a href="#services" class="nav-link">Compétences</a>
@@ -51,7 +51,7 @@
         </nav>
         <div class="landing-text">
             <h1>ZOUAK Amira</h1>
-            <h6>Developpeur web</h6>
+            <h6>Developpeuse web</h6>
         </div>
     </header>
     <section class="about" id="about">
@@ -61,8 +61,8 @@
             </div> -->
             <div class="about-details" data-aos="flip-up" data-aos-delay="600">
                 <div class="about-heading">
-                    <h1>About</h1>
-                    <h6>myself</h6>
+                    <h1>Qui</h1>
+                    <h6>suis-je</h6>
                 </div>
                 <p>
                     <span class='padded'>Je</span> suis une développeuse web full stack qui s'intéresse de près au
