--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <i class="fas fa-code"></i>
                     </div> -->
                     <h1>Back-end</h1>
-                    <p><span class='padded'>Création</span>Création d'API et mise en place d'une base de données.</p>
+                    <p><span class='padded'>Création</span> d'API et mise en place d'une base de données.</p>
                     <p><span class='padded'>Gestion</span> de la sécurité des données et de la protection des
                         utilisateurs sur le Web. </p>
                     <div class="skill-icons">
