--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     </li>
 
 
-                    < <li class="date">
+                    <li class="date">
                         <a href="mailto:zouak.amira@gmail.com" class="icon-link">
                             <i class="fas fa-envelope-square fa-4x"></i>
                         </a>
