--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </nav>
         <div class="landing-text">
             <h1>ZOUAK Amira</h1>
-            <h6>Developpeuse web</h6>
+            <h6>Développeuse web</h6>
         </div>
     </header>
     <section class="about" id="about">
@@ -183,7 +183,7 @@
         <div class="container">
             <div class="section-heading">
                 <h1>Portfolio</h1>
-                <h6>Une selection de mes projets realisés en formation et en autodidacte</h6>
+                <h6>Une sélection de mes projets réalisés en formation et en autodidacte.</h6>
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
@@ -239,7 +239,7 @@
             <div class="section-heading">
                 <h1>Contact</h1>
                 <h6>
-                    N'hésitez-pas à me contacter pour plus d'information
+                    Vous avez un projet, une question, contactez moi ou parlons en 
                 </h6>
             </div>
             <div class="timeline" data-aos="fade-down" data-aos-delay="300">
