--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <i class="fas fa-chart-area"></i>
                     </div> -->
                     <h1>Autres</h1>
-                    <p><span class='padded'>Maitrise</span>des outils de versioning, et de conception pour le web.
+                    <p><span class='padded'>Ma&icirc;trise</span> des outils de versioning, et de conception pour le web.
                     </p>
                     <div class="skill-icons">
                         <div class="skill-item">
