--- a/index.html
+++ b/index.html
@@ -267,6 +267,12 @@
                             <i class="fas fa-street-view  fa-4x"></i>
                             <p>Lyon-France</p>
                         </li>
+                        <li>
+                            <a href="/files/CV_ZOUAK_Amira.pdf" download>
+                                <i class="fas fa-file-download  fa-4x"></i>                       
+                            </a>
+                            <p>Télécharger mon CV</p>  
+                        </li>
                 </ul>
             </div>
         </div>
