--- a/index.html
+++ b/index.html
@@ -246,14 +246,18 @@
             <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                 <ul>
                     <li class="date">
+                        <a href="/files/CV_ZOUAK_Amira.pdf" download>
+                            <i class="fas fa-download fa-4x"></i>                 
+                        </a>
+                        <p>Télécharger mon CV</p>  
+                    </li>
+                    <li class="date">
                         <!-- <h1>Google</h1> -->
                         <a href="#" class="icon-link">
                             <i class="fas fa-phone-square fa-4x"></i>
                         </a>
                         <p>+33783053379</p>
                     </li>
-
-
                     <li class="date">
                         <a href="mailto:zouak.amira@gmail.com" class="icon-link">
                             <i class="fas fa-envelope-square fa-4x"></i>
@@ -262,17 +266,12 @@
                             <p>zouak.amira@gmail.com</p>
                         </a>
 
-                        </li>
-                        <li class="date">
-                            <i class="fas fa-street-view  fa-4x"></i>
-                            <p>Lyon-France</p>
-                        </li>
-                        <li>
-                            <a href="/files/CV_ZOUAK_Amira.pdf" download>
-                                <i class="fas fa-file-download  fa-4x"></i>                       
-                            </a>
-                            <p>Télécharger mon CV</p>  
-                        </li>
+                    </li>
+                    <li class="date">
+                        <i class="fas fa-street-view  fa-4x"></i>
+                        <p>Lyon-France</p>
+                    </li>
+                        
                 </ul>
             </div>
         </div>
