--- a/index.html
+++ b/index.html
@@ -232,6 +232,20 @@
                             class="fab fa-github fa-4x"></i></a>
                 </div>
             </div>
+            <div class="portfolio-item">
+                <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="2100">
+                    <h6>Développement web </h6>
+                    <h1>Site agence d'architecture</h1>
+                    <p>
+                        Site web pour une agence d’architecture, créer avec HTML , CSS et JavaScript.
+                    </p>
+                    <a href="https://architect-website.herokuapp.com/" class="portfolio-icon"><i class="fas fa-globe fa-4x"></i></a>
+                </div>
+                <div class="portfolio-img" data-aos="fade-left" data-aos-delay="2400">
+                    <img src="images/portitem3.jpeg" alt="">
+                </div>
+
+            </div>
         </div>
     </section>
     <!-- Experience -->
