--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                 <ul>
                     <li class="date">
-                        <a href="/files/CV_ZOUAK_Amira.pdf" download>
+                        <a href="/files/CV_Amira_ZOUAK.pdf" download>
                             <i class="fas fa-download fa-4x"></i>                 
                         </a>
                         <p>Télécharger mon CV</p>  
