--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="social-media">
                     <ul class="nav-list">
                         <li>
-                            <a href="www.linkedin.com/in/zouakamira" class="icon-link">
+                            <a href="https://www.linkedin.com/in/zouakamira/" class="icon-link">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                         </li>
